@@ -38,3 +38,10 @@ dependencies {
 springBoot {
     mainClass = 'com.assistant.bootstrap.AiExecutiveAssistantApplication'
 }
+
+tasks.named('bootRun') {
+    jvmArgs = [
+        "--enable-native-access=ALL-UNNAMED",
+        "--sun-misc-unsafe-memory-access=allow"
+    ]
+}
